dialog table, DialogEntity and Transmissions in dialog (#28)
